--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"npm run build",
-    "build":"webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --port 8081",
-    "build:prod":"webpack -p && cp src/index.html dist/index.html"
+    "start": "npm run build",
+    "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --history-api-fallback --port 8081",
+    "build:prod": "webpack -p && cp src/index.html dist/index.html"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
